--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/funnel-display": "^5.0.1",
+    "@fontsource/gayathri": "^5.1.1",
+    "@fontsource/nunito": "^5.1.1",
     "@mui/material": "^6.4.2",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
