--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/gayathri": "^5.1.1",
     "@fontsource/nunito": "^5.1.1",
     "@mui/material": "^6.4.2",
+    "@tailwindcss/vite": "^4.0.7",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
     "react": "^18.3.1",
@@ -38,8 +39,8 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.1",
-    "vite": "^6.0.5"
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.1.1"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
